--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL="postgresql://admin@localhost:5432/db"
 JWT_SECRET="vD6xzpJ2xvq1/5jP85B4NmHYcLmSn0F99RWMxs2364Q="
-NEXT_PUBLIC_WHATSAPP_NUMBER="237696527692"
+NEXT_PUBLIC_WHATSAPP_NUMBER="237"
 
