--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^12.4.0",
     "jose": "^5.9.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.13",
